# DB-Clone-Tool

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  RELEASING.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.py  run.sh  setup.py
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
config.local.example/: config.json.example  connections.json.example
docs/: API.md  DEPLOYMENT.md  RELEASING.md
docs/tasks/DBC-1/: MAIN_TODO.md
docs/tasks/DBC-2/: FINAL_COMPLETION_REPORT.md  MAIN_TODO.md  PHASE_2_COMPLETION.md  PHASE_3_COMPLETION.md
docs/tasks/HEAD/: session_summary_20260126_193214.md
src/db_clone_tool/: __init__.py  clone_service.py  config.py  db_manager.py  db_manager_factory.py  main.py  mysql_download.py  network.py  postgres_download.py  postgres_manager.py  storage.py
src/db_clone_tool/routes/: __init__.py  api.py  web.py
src/db_clone_tool/static/css/: style.css
src/db_clone_tool/static/js/: app.js
src/db_clone_tool/templates/: index.html
tests/: __init__.py  conftest.py  test_api.py  test_browse_button.py  test_config.py  test_functional.py  test_integration.py  test_mysql_download.py  test_platform_paths.py  test_postgres_manager.py  test_run.py  test_storage.py  test_tarxz_extraction.py
