[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "db-clone-tool"
version = "0.1.0"
description = "Web-based MySQL database schema cloning tool using mysqldump"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Melih Çelenk", email = "info@melihcelenk.com"}
]
keywords = ["mysql", "database", "schema", "clone", "backup", "mysqldump"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Flask==3.0.0",
    "pymysql==1.1.0",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.12.0",
    "flake8>=7.0.0",
    "mypy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/melihcelenk/db-clone-tool"
Documentation = "https://github.com/melihcelenk/db-clone-tool#readme"
Repository = "https://github.com/melihcelenk/db-clone-tool"
Issues = "https://github.com/melihcelenk/db-clone-tool/issues"

[project.scripts]
db-clone-tool = "src.db_clone_tool.main:run_app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
db_clone_tool = ["templates/**/*", "static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "build", "dist"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
